# edgehog-zephyr-device

./: .gitignore  west-ci-msv.yml  west-ci-reference.yml  west-e2e.yml  west.yml
.github/workflows/: build.yml  doc-check.yml  interface-generation.yml  static.yml  test.yml
e2e/: CMakeLists.txt  Kconfig  README.md  certificate.cmake  prj.conf  testcase.yaml
e2e/boards/: native_sim.conf  qemu_x86.conf  qemu_x86.overlay
e2e/http_server_data/: archive.tar  archive.tar.lz4  compressed_archive.tar.lz4  first.txt  last.txt  test_data_0.txt  test_data_1.txt
e2e/http_server_data/test_directory/: test_data_3.txt
e2e/include/: ca_certificate_inc.h  compression.h  decompression.h  utilities.h  ztar.h
e2e/pytest/: configuration.py  data.py  file_transfer.py  http_server.py  interface_testing.py  interface_testing_aggregate.py  interface_testing_datastream.py  interface_testing_property.py  test_e2e.py
e2e/src/: compression.c  decompression.c  device_handler.c  main.c  runner.c  ztar.c
e2e/sysbuild/boards/: qemu_x86.conf  qemu_x86.overlay
heap_statistics/: clean_file.py  heaps_stats.py  merge_files.py  split_file.py
lib/edgehog_device/: Kconfig  device.c  getaddrinfo.c  heap.c  http.c  ota.c  telemetry.c
lib/edgehog_device/file_transfer/: download.c  upload.c  utils.c
lib/edgehog_device/include/: edgehog_private.h  getaddrinfo.h  heap.h
puncover_testing/: generated.mermaid  gui_puncover.py  my_puncover.py
samples/edgehog_app/: CMakeLists.txt  Kconfig  README.md  README_NXP.md  prj-zephyr-msv.conf  prj.conf
samples/edgehog_app/boards/: frdm_rw612.overlay  (+3 more)
(+10 files in other folders)
